samples/_failures_safe/1761800745_674a80_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1da451b7.c: In function ‘main’:
./samples/SAFE/__tmp_1da451b7.c:144:9: error: expected expression at end of input
  144 |         return
      |         ^~~~~~
./samples/SAFE/__tmp_1da451b7.c:144:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1da451b7.c:144:9: error: expected declaration or statement at end of input
